--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
   "type": "library",
   "require": {
     "php": "^7.3|^8.0",
-    "ext-imagick": "*"
+    "ext-imagick": "*",
+    "intervention/image": "^3.3"
   },
   "require-dev": {
     "phpunit/phpunit": "^9.0"
